# python-cli-boilerplate

./: LICENSE  README.md  pyproject.toml
src/cli/: main.py
src/cli/commands/: example.py
